fixed cart products alignment
fixed the alignment of my cart images so that theyre perfectly stacked on each other, moved the remove under the product photo

--- a/solution-hw1/CSS/styles.css
+++ b/solution-hw1/CSS/styles.css
@@ -21,7 +21,6 @@ nav ul li a.active {
     background-color: yellow;
     padding: 5px;
 }
-
 nav ul li a:hover {
     text-decoration: none;
 }
@@ -63,10 +62,6 @@ nav ul li a:hover {
     color: #333;
     text-decoration: underline; 
 }
-.product-item p {
-    color: black;
-}
-/* PRODUCT DETAILS PAGE*/
 .product-title h1 {
     color: black;
     text-align: center;
@@ -146,14 +141,16 @@ nav ul li a.active {
 }
 .cart-item {
     display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 30px 0;
+    flex-direction: row;
+    align-items: flex-start;
+    justify-content: space-between; 
+    width: 100%;
+    max-width: 800px;
+    margin: 20px auto;
+    padding: 20px;
+    border-bottom: 2px solid black;
 }
 .item-image {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
     margin-right: 20px;
 }
 .cart-item-image {
